<resources>
    <string name="app_name">Rilke Festival Application</string>
    <string name="menu_Title">Rilke Festival</string>
    <string name="menu_footer">2012 Hevs</string>
    <string name="gallery_iconDescription">Rilke Images</string>
    <string name="story_Previous">Prev</string>
    <string name="story_Next">Next</string>
    <string name="story_Home">Home</string>
    <string name="story_Title">Stories</string>
    <string name="poetry_Title">Poetry</string>
    <string name="vid_Title">Video</string>
    <string name="quiz_result">Result</string>
    <string name="quiz_again">Try Again</string>
    <string name="quiz_correct">Correct:</string>
    <string name="news_Title">News</string>
    <string name="news_PostTitle">Post title</string>
    <string name="gallery_Title">Gallery</string>
    <string-array name="menu_titles">
        <item>News</item>
        <item>Gallery</item>
        <item>Stories</item>
        <item>Videos</item>
        <item>Poetry</item>
        <item>Sketch</item>
        <item>Quiz</item>
        <item>Route</item>
    </string-array>
    <string-array name="poetry_author">
        <item >22.2.1898, Berlin-Wilmersdorf</item>
        <item >summer/automn 1898, ?</item>
        <item >11.7.1906, Paris</item>
        <item >21.7.1907, Paris</item>
        <item >early decembre 1911, Duino</item>
        <item >winter 1913/14, Paris</item>
        <item >april 1914, Paris</item>
    </string-array>
    <string-array name="poetry_Text">
        <item >Ich ließ meinen Engel lange nicht los,\nund er verarmte mir in den Armen\nund wurde klein, und ich wurde groß:\nund auf einmal war ich das Erbarmen,\nund er eine zitternde Bitte bloß.\nDa hab ich ihm seine Himmel gegeben, -\nund er ließ mir das Nahe, daraus er entschwand;\ner lernte das Schweben, ich lernte das Leben,\nund wir haben langsam einander erkannt&#x2026;</item>
        <item >Ernster Engel aus Ebenholz:\nDu riesige Ruh.\nDein Schweigen schmolz\nnoch nie in den Bränden\nvon Büßerhänden.\nFlammenumflehter!\nDeine Beter\nsind stolz:\nwie du.\n\nDer du versteinst,\ndu über den Blicken beginnender\nKönig, erkiese\ndir ein Geschlecht,\ndem du gerecht\nerscheinst,\nsaumsinnender\nRiese.\n\nDu, aller Matten\nFurchteinflößer,\nEiner ist größer\nals du: dein Schatten.</item>
        <item >Wie manches Mal durch das noch unbelaubte\nGezweig ein Morgen durchsieht, der schon ganz\nim Frühling ist: so ist in seinem Haupte\nnichts, was verhindern könnte, das der Glanz\n\naller Gedichte uns fast tödlich träfe;\ndenn noch kein Schatten ist in seinem Schaun,\nzu kühl für Lorbeer sind noch seine Schläfe,\nund später erst wird aus den Augenbraun\n\nhochstämmig sich der Rosengarten heben,\naus welchem Blätter, einzeln, ausgelöst\nhintreiben werden auf des Mundes Beben,\n\nder jetzt noch still ist, niegebraucht und blinkend\nund nur mit seinem Lächeln etwas trinkend,\nals würde ihm sein Singen eingeflößt.</item>
        <item >Willkürlich von Gewesnem ausgeweitet:\nvon Wut und Aufruhr, von dem Kunterbunt\ndas die Verurteilten zu Tod begleitet,\nvon Buden, von der Jahrmarktsrufer Mund,\nund von dem Herzog, der vorüber reitet,\nund von dem Hochmut von Burgund,\n\n(auf allen Seiten Hintergrund):\n\nladet der Platz zum Einzug seiner Weite\ndie fernen Fenster unaufhörlich ein,\nwährend sich das Gefolge und Geleite\nder Leere langsam an den Handelsreihn\n\nverteilt und ordnet. In die Giebel steigend,\nwollen die kleinen Häuser alles sehen,\ndie Türme vor einander scheu verschweigend,\ndie immer maßlos hinter ihnen stehen.</item>
        <item >Meiner lieben Ruth zum 10. Geburtstag\n\nWelcher bist du, mein lieber Stern,\nder mir zu Herzen schaut?\nEinem innigen, einem innigern\nbin ich anvertraut.\n\nWelcher bist du? Der Himmel steht\nnicht zwischen Ost und West,\ndu hast dich immer umgedreht\nund auch ich bin nicht fest.\n\nWelcher bist du - ? (nein sag mir&#8217;s nicht),\nder mir zu Herzen schaut;\nwenn ich mich nach allen richt\nwerd ich am besten Braut.</item>
        <item >Guter Tag.         Da prüft man doch: was bringt er?\nUnd wie langsam liest man seine Schrift.\nRascher, reiner, kühner, unbedingter:\noh wie uns die Freude übertrifft.\n\nIst uns als Künftigste zuvor,\nwendet sich und blickt und macht uns schneller,\nund wir folgen wie die Vogelsteller,\nund das Herz klingt oben bis ins Ohr.\n\nGlück: was rollt das schwer auf seinem Rade,\nmüde, immer wieder unbereit;\naber Freude steht und blüht gerade,\nund wir treten an die Jahreszeit.</item>
        <item >Dich zu fühlen bin ich aus den leichten\nKreisen meiner Fühlungen gestiegen\nund jetzt soll mich täglich im Erreichten\nTrauer großer Nähe überwiegen,\ndieses hülflos menschliche Gewicht.</item>
    </string-array>
    <string-array name="poetry_poetryTitle">
        <item >Ich ließ meinen Engel lange nicht los</item>
        <item >Gebet</item>
        <item >Früher Apollo</item>
        <item >Der Platz</item>
        <item >Abend-Lied</item>
        <item >Guter Tag</item>
        <item >Dich zu fühlen</item>
    </string-array>
    <string-array name="story_author">
        <item >vor dem 03.08.1895</item>
        <item >1898</item>
        <item >1899</item>
    </string-array>
    <string name="routeMenu_calcRoute">Calculate Route</string>
    <string name="routeMenu_centMercier">Center Festival Location</string>
    <string name="routeMenu_centYou">Center my Location</string>
    <string name="sketch_back">Back</string>
    <string name="sketch_title">Sketch Agenda</string>
</resources>