<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
<VideoView
   android:id="@+id/myvideoview"
   android:layout_width="fill_parent"
   android:layout_height="0dip" 
   android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/vid_btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/story_Previous" />
        <Button
            android:id="@+id/vid_btnHome"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/story_Home" />
        <Button
            android:id="@+id/vid_btnNext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/story_Next" />
    </LinearLayout>
</LinearLayout>